crates/crb-types/src/snapshots/crb_types__benchmark__tests__judge_verdict_default.snap
---
source: crates/crb-types/src/benchmark.rs
expression: v
---
JudgeVerdict {
    reasoning: "",
    match_: false,
    confidence: 0.0,
}
