crates/crb-types/src/snapshots/crb_types__benchmark__tests__judge_verdict_serde_roundtrip-2.snap
---
source: crates/crb-types/src/benchmark.rs
expression: v
---
JudgeVerdict {
    reasoning: "No match",
    match_: false,
    confidence: 0.3,
}
