crates/crb-types/src/snapshots/crb_types__benchmark__tests__judge_verdict_serde_roundtrip.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "&original"
---
{
  "reasoning": "Found a semantic match",
  "match": true,
  "confidence": 0.95
}
