crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_add_assign.snap
---
source: crates/crb-types/src/benchmark.rs
expression: a
---
Metrics {
    true_positives: 8,
    false_positives: 3,
    false_negatives: 3,
    duration_secs: 30.0,
}
