crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_aliases_deserialize-2.snap
---
source: crates/crb-types/src/benchmark.rs
expression: m2
---
Metrics {
    true_positives: 1,
    false_positives: 0,
    false_negatives: 0,
    duration_secs: 30.0,
}
