crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_aliases_deserialize.snap
---
source: crates/crb-types/src/benchmark.rs
expression: m
---
Metrics {
    true_positives: 5,
    false_positives: 2,
    false_negatives: 1,
    duration_secs: 10.0,
}
