crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_default.snap
---
source: crates/crb-types/src/benchmark.rs
expression: m
---
Metrics {
    true_positives: 0,
    false_positives: 0,
    false_negatives: 0,
    duration_secs: 0.0,
}
