crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_provider_trait-2.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "(m.precision(), expected_precision)"
---
(
    0.6666666666666666,
    0.6666666666666666,
)
