crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_provider_trait-3.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "(m.recall(), expected_recall)"
---
(
    0.7692307692307693,
    0.7692307692307693,
)
