crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_provider_trait-4.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "(m.f1(), expected_f1)"
---
(
    0.7142857142857142,
    0.7142857142857142,
)
