crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_provider_trait.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "(m.true_positives(), m.false_positives(), m.false_negatives())"
---
(
    10,
    5,
    3,
)
