crates/crb-types/src/snapshots/crb_types__benchmark__tests__metrics_serde_roundtrip.snap
---
source: crates/crb-types/src/benchmark.rs
expression: "&original"
---
{
  "true_positives": 10,
  "false_positives": 3,
  "false_negatives": 2,
  "duration_secs": 45.5
}
